--- a/tool/yunying-upload.html
+++ b/tool/yunying-upload.html
@@ -156,7 +156,8 @@
 
           $.ajax({
             type: 'post',
-            url: 'https://file.moss.wingoing.cn/fm/upload',
+            // url: 'https://file.moss.wingoing.cn/fm/upload',  // 通用
+            url: 'https://wxc627fe67f1e42564.mosspage.wingoing.cn/fm//upload',  // 长生
             data: formData,
             dataType: 'json',
             contentType: false,
