--- a/test/test333.html
+++ b/test/test333.html
@@ -1,15 +1,34 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="en">
 <head>
-<div th:replace="mini/incloud_template :: head"></div>
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Document</title>
-<style>
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <style>
+    .fu {
+      margin: 100px;
+      width: 200px;
+      height: 200px;
+      border: 10px solid yellow;
+      position: relative;
+      padding: 30px;
+    }
+
+    .zi {
+      width: 50px;
+      height: 50px;
+      background-color: red;
+      right: 0;
+      bottom: 0;
+      position: absolute;
+    }
+  </style>
 </head>
 <body>
-	<iframe frameborder="0" src="https://www.pearvideo.com/iframe_player.jsp?contId=1724506&tag=src" allowfullscreen style="margin: 0 auto;display: block;width: 100%;height: 360px;"></iframe>
-	
+  <div class="fu">
+    <div class="zi"></div>
+  </div>
 </body>
 </html>
